feat: Add dependencyManagement AWS